#
#############################################################################

########## RECENT CHANGE-LOG #########

  Note that we version STiki by the date (UTC locale) of the build-date. This
  is also the file-name under which the executable/source is released. The 
  formal version number (e.g., 2.1) is in too many places to be 
  conveniently altered for small changes:
  
  * 2013-XX-XX
      # A new substitution, "#p#", is available for use when authoring 
        revert comments and AGF messages. This makes it possible to provide
        the "user whose version is being reverted to". (T#032) 
      # In lieu of the latest emergency release and the manual notification
        of the required upgrade, code has now been implemented to automate
        this in the future. Clients now make an explicit version check against
        the server, which will pop an informational dialogue and forced
        exit if the user's version is insufficient. (T#033)
      # The first user-facing "revision filter" has been installed in the
        "filter" menu. There, users can choose whether edits comittted by
        privileged users (i.e., sysops, reviewers, and rollbackers) should
        be displayed in the GUI. (T#029)
      # A bug whereby mnemonic usage could result in duplicate 
        classifications has been fixed. (T#030)
  
  * 2013-08-19
      # EMERGENCY RELEASE: The following security change by WMF developers:
        [http://lists.wikimedia.org/pipermail/wikitech-l/2013-August/071266.html]
        completely broke how login cookies are parsed in STiki (and most
        other applications, I have to imagine). This caused the edit/rollback
        tokens requested to be invalid under server checks, causing all
        edits to fail with a "badtoken" response. Every user will need
        to upgrade their STiki distribution.
      # Default revert comments were changed to note the quantity of edits